=add some files and gitignore

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="RPi-Monitor">
-  <meta name="author" content="RPi-Experiences">
+  <meta name="author" content="Tony.J.Wang">
   <meta http-equiv="Cache-control" content="public" />
 
   <!-- CSS -->
