--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,9 +26,9 @@
   <div class="container-fluid column-fluid" style="text-align:center;padding-top:20px;">
 
     <div>
-      <button type="button" class="btn btn-primary" onclick="$.ajax({url:'/led/1'})">白色LED灯</button>
-      <button type="button" class="btn btn-success" onclick="$.ajax({url:'/led/2'})">绿色LED灯</button>
-      <button type="button" class="btn btn-danger" onclick="$.ajax({url:'/led/3'})">红色LED灯</button>
+      <button type="button" class="btn btn-primary" onclick="$.ajax({url:'/led/switch/1'})">白色LED灯</button>
+      <button type="button" class="btn btn-success" onclick="$.ajax({url:'/led/switch/2'})">绿色LED灯</button>
+      <button type="button" class="btn btn-danger" onclick="$.ajax({url:'/led/switch/3'})">红色LED灯</button>
     </div>
     <div style="margin-top:10px;">
       <button type="button" class="btn btn-primary" onclick="capture()">远程拍照</button>
